--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.application.name=employee-app
 
 # H2 database configuration (file-based)
-spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:./data/db;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Configuration to enable H2 web console
@@ -14,7 +14,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Server port configuration
-server.port=8081
+server.port=8080
 
-# swagger-ui custom path
-springdoc.swagger-ui.path=/swagger-ui.html
+# API documentation path for Springdoc OpenAPI
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+
+
